--- a/gui.html
+++ b/gui.html
@@ -2,12 +2,12 @@
 
 <head>
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" /> -->
-    <link rel="stylesheet" href="css/semantic.min.css">
+    <link rel="stylesheet" href="semantic/dist/semantic.min.css">
     <link rel="stylesheet" href="css/spectrum.css">
     <link rel="stylesheet" href="css/ui.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.numeric.min.js"></script>
-    <script src="js/semantic.min.js"></script>
+    <script src="semantic/dist/semantic.min.js"></script>
     <script src="js/spectrum.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/core.js"></script>
