--- a/gui.html
+++ b/gui.html
@@ -122,7 +122,7 @@
                             data: controllers,
                             label: "Controller",
                             placeholder: "Select Controller...",
-                            // default: "strip",
+                            default: "matrix",
                             onChange: filterAnims
                         });
 
