--- a/gui.html
+++ b/gui.html
@@ -45,6 +45,7 @@
             data: _drivers,
             label: "Driver",
             placeholder: "Select Driver...",
+            onSaveClick: saveDriverPreset
             // default: "visualizer"
         });
         if (params) {
@@ -115,19 +116,21 @@
         });
     }
 
+    function doSaveServerConfig() {
+        var config = $server_config.val();
+        saveServerConfig(config.config, function(result){
+            console.log(result);
+            alert("Save Complete! Please restart server.");
+            $("#serverConfig").sidebar('toggle');
+        });
+    }
+
+    function cancelServerConfig() {
+        $("#serverConfig").sidebar('toggle');
+    }
+
     function showServerConfig(){
-        $("#serverConfig").modal({
-            blurring:false,
-            closable:true,
-            onApprove: function() {
-                var config = $server_config.val();
-                saveServerConfig(config.config, function(result){
-                    console.log(result);
-                    alert("Save Complete! Please restart server.");
-                });
-            }
-        })
-        .modal('show');
+        $("#serverConfig").sidebar('toggle');
     }
 
     function setLoading(id, state){
@@ -137,6 +140,16 @@
         else {
             $(id).removeClass('loading');
         }
+    }
+
+    function showPresetSaveModal(){
+        $("#savePresetModal").modal({blurring:true, closable:false}).modal('show');
+    }
+    function saveDriverPreset(){
+
+    }
+    function saveControllerPreset(){
+
     }
 
     $(document)
@@ -162,7 +175,8 @@
                             label: "Controller",
                             placeholder: "Select Controller...",
                             default: "matrix",
-                            onChange: filterAnims
+                            onChange: filterAnims,
+                            onSaveClick: saveControllerPreset
                         });
 
                         getConfig(function(config) {
@@ -253,43 +267,49 @@
 
             $("#btnStatus").click(showStatusFeed);
             $("#btnSettings").click(showServerConfig);
+            $("#saveServerConfig").click(doSaveServerConfig);
+            $("#cancelServerConfig").click(cancelServerConfig);
         });
     </script>
 </head>
 
-<body class="ui">
+<body class="ui blurring">
+
     <div class="ui dimmer" id="loadDimmer">
         <div class="ui large text loader">Loading</div>
     </div>
 
-    <div class="ui right floated icon buttons" id="menuBtns">
-      <button class="ui button" id="btnSettings"><i class="settings icon"></i></button>
-      <button class="ui green button" id="btnStatus"><i class="info icon"></i></button>
-      <button class="ui red button" id="btnErrors"><i class="warning sign icon"></i></button>
-    </div>
-    <div class="ui top attached tabular menu">
-        <a class="active item" data-tab="config_tab">Config</a>
-        <a class="item" data-tab="anim_tab">Animation</a>
-        <!-- <a class="item" data-tab="server_tab">Server Config</a> -->
-    </div>
-    <div class="ui bottom attached active tab segment" data-tab="config_tab" id="tabConfig">
-        <div id="driver"></div>
-        <div class="ui hidden divider short"></div>
-        <div id="controller"></div>
-        <div class="ui hidden divider short"></div>
-        <div class="ui button green" id="startDriver">Start</div>
-    </div>
-    <div class="ui bottom attached tab segment" data-tab="anim_tab" id="tabAnim">
-        <div id="anims"></div>
-        <div class="ui hidden divider short"></div>
-        <div class="ui button green" id="startAnim">Start</div>
-        <div class="ui button red" id="stopAnim">Stop</div>
-    </div>
-    <div class="ui modal" id="serverConfig">
+    <div class="ui top sidebar inverted vertical menu" id="serverConfig">
         <div id="server_config"></div>
-        <div class="actions">
-            <div class="ui approve green button">Save</div>
-            <div class="ui deny red button">Cancel</div>
+        <div class="ui segment inverted right floated" id="serverConfigBtns">
+            <div class="ui green button" id="saveServerConfig">Save</div>
+            <div class="ui red button" id="cancelServerConfig">Cancel</div>
+        </div>
+    </div>
+
+    <div class="pusher">
+        <div class="ui right floated icon buttons" id="menuBtns">
+          <button class="ui button" id="btnSettings"><i class="settings icon"></i></button>
+          <button class="ui green button" id="btnStatus"><i class="info icon"></i></button>
+          <button class="ui red button" id="btnErrors"><i class="warning sign icon"></i></button>
+        </div>
+        <div class="ui top attached tabular menu">
+            <a class="active item" data-tab="config_tab">Config</a>
+            <a class="item" data-tab="anim_tab">Animation</a>
+            <!-- <a class="item" data-tab="server_tab">Server Config</a> -->
+        </div>
+        <div class="ui bottom attached active tab segment" data-tab="config_tab" id="tabConfig">
+            <div id="driver"></div>
+            <div class="ui hidden divider short"></div>
+            <div id="controller"></div>
+            <div class="ui hidden divider short"></div>
+            <div class="ui button green" id="startDriver">Start</div>
+        </div>
+        <div class="ui bottom attached tab segment" data-tab="anim_tab" id="tabAnim">
+            <div id="anims"></div>
+            <div class="ui hidden divider short"></div>
+            <div class="ui button green" id="startAnim">Start</div>
+            <div class="ui button red" id="stopAnim">Stop</div>
         </div>
     </div>
 
@@ -313,6 +333,24 @@
         </div>
         <div class="actions">
             <div class="ui approve green button">OK</div>
+        </div>
+    </div>
+
+    <div class="ui basic small modal" id="savePresetModal">
+        <div class="header">Save Preset</div>
+        <div class="ui content" >
+            <div class="ui fluid labeled input ui_input">
+                <div class="ui label">Preset Name</div>
+                <input type="text" id="savePresetName">
+            </div>
+            <div class="ui fluid labeled input">
+                <div class="ui label">Description</div>
+                <input type="text" id="savePresetDesc">
+            </div>
+        </div>
+        <div class="actions">
+            <div class="ui approve green button">Save</div>
+            <div class="ui deny red button">Cancel</div>
         </div>
     </div>
 </body>
