--- a/gui.html
+++ b/gui.html
@@ -9,6 +9,7 @@
     <script src="js/jquery.numeric.min.js"></script>
     <script src="semantic/dist/semantic.min.js"></script>
     <script src="js/spectrum.js"></script>
+    <script src="js/loglevel.min.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/core.js"></script>
     <script src="js/api.js"></script>
@@ -16,6 +17,9 @@
     <script src="js/bp.js"></script>
     <script src="js/controls.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        setLogAll();
+    </script>
 </head>
 
 <body class="ui">
