--- a/gui.html
+++ b/gui.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <title>PixelWeb</title>
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" /> -->
     <link rel="stylesheet" href="semantic/dist/semantic.min.css">
     <link rel="stylesheet" href="css/spectrum.css">
