--- a/gui.html
+++ b/gui.html
@@ -23,47 +23,69 @@
     </script>
 </head>
 
-<body class="ui">
-
+<body>
     <!-- <div class="ui dimmer" id="loadDimmer">
         <div class="ui large text loader">Loading</div>
     </div> -->
 
-    <div class="ui top sidebar inverted vertical menu" id="serverConfig">
+    <!-- <div class="ui top sidebar inverted vertical menu" id="serverConfig">
         <div id="server_config"></div>
         <div class="ui segment inverted right floated" id="serverConfigBtns">
             <div class="ui green button" id="saveServerConfig">Save</div>
             <div class="ui red button" id="cancelServerConfig">Cancel</div>
         </div>
-    </div>
+    </div> -->
+    <div class="ui top attached segment pushable">
+        <div class="ui visible left vertical inverted thin sidebar labeled icon menu" id="sideMenu">
+            <a class="side_menu item" id="mnuAnim">
+                <i class="options icon"></i> Animations
+            </a>
+            <a class="side_menu item" id="mnuConfig">
+                <i class="configure icon"></i> Configure
+            </a>
+            <a class="side_menu item" id="mnuServer">
+                <i class="settings icon"></i> Server Config
+            </a>
+            <a class="side_menu item" id="mnuConsole">
+                <i class="terminal icon"></i> Console
+            </a>
+        </div>
 
-    <div class="pusher">
-        <div class="ui right floated icon buttons" id="menuBtns">
-            <button class="ui button" id="btnSettings"><i class="settings icon"></i></button>
-            <button class="ui green button" id="btnStatus"><i class="info icon"></i></button>
-            <button class="ui red button" id="btnErrors"><i class="warning sign icon"></i></button>
-        </div>
-        <div class="ui top attached tabular menu">
-            <a class="active item" data-tab="config_tab">Config</a>
-            <a class="item" data-tab="anim_tab">Animation</a>
-            <!-- <a class="item" data-tab="server_tab">Server Config</a> -->
-        </div>
-        <div class="ui bottom attached active tab segment" data-tab="config_tab" id="tabConfig">
-            <div id="driver"></div>
-            <div class="ui icon buttons">
-                <button class="ui button" id="btnAddDriver"><i class="green plus icon"></i></button>
-                <button class="ui button disabled" id="btnRemoveDriver"><i class="red minus icon"></i></button>
+        <div class="pusher" id="main_content">
+            <div class="ui basic segment ui_pane" id="paneAnim">
+                <div id="anims"></div>
+                <div class="ui hidden divider short"></div>
+                <div class="ui button green" id="startAnim">Start</div>
+                <div class="ui button red" id="stopAnim">Stop</div>
             </div>
-            <div class="ui hidden divider short"></div>
-            <div id="controller"></div>
-            <div class="ui hidden divider short"></div>
-            <div class="ui button green" id="startDriver">Start</div>
-        </div>
-        <div class="ui bottom attached tab segment" data-tab="anim_tab" id="tabAnim">
-            <div id="anims"></div>
-            <div class="ui hidden divider short"></div>
-            <div class="ui button green" id="startAnim">Start</div>
-            <div class="ui button red" id="stopAnim">Stop</div>
+            <div class="ui basic segment ui_pane" id="paneConfig">
+                <div id="driver"></div>
+                <div class="ui icon buttons">
+                    <button class="ui button" id="btnAddDriver"><i class="green plus icon"></i></button>
+                    <button class="ui button disabled" id="btnRemoveDriver"><i class="red minus icon"></i></button>
+                </div>
+                <div class="ui hidden divider short"></div>
+                <div id="controller"></div>
+                <div class="ui hidden divider short"></div>
+                <div class="ui button green" id="startDriver">Start</div>
+            </div>
+
+            <div class="ui basic segment ui_pane" id="paneServer">
+                <div id="server_config"></div>
+                <div class="ui basic segment right floated" id="serverConfigBtns">
+                    <div class="ui green button" id="saveServerConfig">Save</div>
+                    <div class="ui red button" id="cancelServerConfig">Cancel</div>
+                </div>
+            </div>
+
+            <div class="ui basic segment ui_pane" id="paneConsole">
+                <div class="ui large header">PixelWeb Status</div>
+                <div class="ui content scroll_feed">
+                    <div class="ui feed" id="statusFeed">
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 
@@ -72,18 +94,6 @@
         <div class="image content">
             <img class="image"><i class="huge red warning sign icon"></i></img>
             <p class="" id="bpErrorMsg"></p>
-        </div>
-        <div class="actions">
-            <div class="ui approve green button">OK</div>
-        </div>
-    </div>
-
-    <div class="ui large modal" id="statusFeedModal">
-        <div class="header">PixelWeb Status</div>
-        <div class="ui content scroll_feed">
-            <!-- <img class="image"><i class="huge red warning sign icon"></i></img> -->
-            <div class="ui feed" id="statusFeed">
-            </div>
         </div>
         <div class="actions">
             <div class="ui approve green button">OK</div>
