--- a/gui.html
+++ b/gui.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="semantic/dist/semantic.min.css">
     <link rel="stylesheet" href="css/spectrum.css">
     <link rel="stylesheet" href="css/ui.css">
+    <link rel="stylesheet" href="css/jquery-ui.min.css">
     <script src="js/jquery.min.js"></script>
+    <script src="js/jquery-ui.min.js"></script>
     <script src="js/jquery.numeric.min.js"></script>
     <script src="semantic/dist/semantic.min.js"></script>
     <script src="js/spectrum.js"></script>
@@ -38,7 +40,10 @@
     <div class="ui top attached segment pushable">
         <div class="ui visible left vertical inverted thin sidebar labeled icon menu" id="sideMenu">
             <a class="side_menu item" id="mnuAnim">
-                <i class="options icon"></i> Animations
+                <i class="film icon"></i> Animations
+            </a>
+            <a class="side_menu item" id="mnuQueue">
+                <i class="retweet icon"></i> Queue
             </a>
             <a class="side_menu item" id="mnuConfig">
                 <i class="configure icon"></i> Configure
@@ -55,8 +60,20 @@
             <div class="ui basic segment ui_pane" id="paneAnim">
                 <div id="anims"></div>
                 <div class="ui hidden divider short"></div>
-                <div class="ui button green" id="startAnim">Start</div>
+                <div class="ui disabled button" id="addQueue">Add to Queue</div>
+                <div class="ui disabled button green" id="startAnim">Start</div>
                 <div class="ui button red" id="stopAnim">Stop</div>
+            </div>
+            <div class="ui basic segment ui_pane" id="paneQueue">
+                <div class="ui fluid large header">Animation Queue
+                </div>
+                <div class="ui list" id="queueList">
+                </div>
+                <div class='ui basic segment'>
+                    <!-- <button class='ui icon button' id="saveQ"><i class='save icon'></i></button> -->
+                    <button class='ui green button' id="startQ">Start</button>
+                    <button class='ui red button' id="stopQ">Stop</button>
+                </div>
             </div>
             <div class="ui basic segment ui_pane" id="paneConfig">
                 <div id="driver"></div>
@@ -80,9 +97,7 @@
 
             <div class="ui basic segment ui_pane" id="paneConsole">
                 <div class="ui large header">PixelWeb Status</div>
-                <div class="ui content scroll_feed">
-                    <div class="ui feed" id="statusFeed">
-                    </div>
+                <div class="ui feed" id="statusFeed">
                 </div>
             </div>
 
