--- a/gui.html
+++ b/gui.html
@@ -134,6 +134,28 @@
         </div>
     </div>
 
+    <div class="ui basic small modal" id="deletePresetModal">
+        <div class="header">Delete Preset</div>
+        <div class="ui content" id="deletePresetMsg">
+
+        </div>
+        <div class="actions">
+            <div class="ui approve green button">Yes</div>
+            <div class="ui deny red button">No</div>
+        </div>
+    </div>
+
+    <div class="ui basic small modal" id="noDeleteModal">
+        <div class="header">Unable to Delete</div>
+        <div class="image content">
+            <img class="image"><i class="huge yellow warning circle icon"></i></img>
+            <p>The selected preset is part of a pre-configred module and cannot be deleted.</p>
+        </div>
+        <div class="actions">
+            <div class="ui approve green button">OK</div>
+        </div>
+    </div>
+
     <div class="ui basic small modal" id="addQueueModal">
         <div class="header" id="addQueueHeader">Add to Queue</div>
         <div class="ui content">
