--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
     <div class="ui basic modal inverted" id="load_modal">
         <div class="ui center aligned header">Initializing PixelWeb</div>
         <div class="content">
-            <div class="ui inverted active green progress" id="loadProg">
+            <div class="ui inverted active indicating large progress" id="loadProg">
                 <div class="bar" style="transition-duration: 300ms;">
                     <div class="progress"></div>
                 </div>
-                <div class="label"></div>
             </div>
+            <div class="ui center aligned inverted header" id="progLabel">Loading...</div>
         </div>
     </div>
 
     <div class="ui top attached segment pushable" id="main_window">
-        <div class="ui visible left vertical inverted thin sidebar labeled icon menu" id="sideMenu">
+        <div class="ui visible left vertical inverted thin sidebar menu" id="sideMenu">
             <a class="side_menu item" id="mnuAnim">
                 <i class="film icon"></i> Animations
             </a>
             <a class="side_menu item" id="mnuQueue">
                 <i class="retweet icon"></i> Queue
+                <div class="ui hidden red label"></div>
                 <!-- <div class="floating ui red label">22</div> -->
             </a>
             <a class="side_menu item" id="mnuConfig">
