--- a/index.html
+++ b/index.html
@@ -46,14 +46,13 @@
             </a>
             <a class="side_menu item" id="mnuQueue">
                 <i class="retweet icon"></i> Queue
-                <div class="ui hidden red label"></div>
-                <!-- <div class="floating ui red label">22</div> -->
+                <div class="ui hidden green label" id="queueCount"></div>
             </a>
             <a class="side_menu item" id="mnuConfig">
-                <i class="configure icon"></i> Configure
+                <i class="configure icon"></i> Output Setup
             </a>
             <a class="side_menu item" id="mnuServer">
-                <i class="settings icon"></i> Server Config
+                <i class="laptop icon"></i> App Config
             </a>
             <a class="side_menu item" id="mnuConsole">
                 <i class="terminal icon"></i> Console
@@ -62,6 +61,7 @@
 
         <div class="pusher" id="main_content">
             <div class="ui basic segment ui_pane" id="paneAnim">
+                <div class="ui large header">Animations</div>
                 <div id="anims"></div>
                 <div class="ui hidden divider short"></div>
                 <div class="ui green button" id="saveQueueEdit">Save</div>
@@ -69,6 +69,7 @@
                 <div class="ui disabled button green" id="startAnim">Start</div>
                 <div class="ui button red" id="stopAnim">Stop</div>
             </div>
+
             <div class="ui basic segment ui_pane" id="paneQueue">
                 <div class="ui grid">
                     <div class="ui fluid large header five wide column" id="queueHeader">Queue</div>
@@ -89,7 +90,9 @@
                     <button class='ui red button' id="stopQ">Stop</button>
                 </div>
             </div>
+
             <div class="ui basic segment ui_pane" id="paneConfig">
+                <div class="ui large header">Output Setup</div>
                 <div id="driver"></div>
                 <div class="ui icon buttons">
                     <button class="ui button" id="btnAddDriver"><i class="green plus icon"></i></button>
@@ -102,6 +105,7 @@
             </div>
 
             <div class="ui basic segment ui_pane" id="paneServer">
+                <div class="ui large header">App Config</div>
                 <div id="server_config"></div>
                 <div class="ui basic segment right floated" id="serverConfigBtns">
                     <div class="ui green button" id="saveServerConfig">Save</div>
@@ -168,6 +172,17 @@
     <div class="ui basic small modal" id="deletePresetModal">
         <div class="header">Delete Preset</div>
         <div class="ui content" id="deletePresetMsg">
+
+        </div>
+        <div class="actions">
+            <div class="ui approve green button">Yes</div>
+            <div class="ui deny red button">No</div>
+        </div>
+    </div>
+
+    <div class="ui basic small modal" id="deleteQueueModal">
+        <div class="header">Delete Queue</div>
+        <div class="ui content" id="deleteQueueMsg">
 
         </div>
         <div class="actions">
