--- a/index.html
+++ b/index.html
@@ -42,11 +42,14 @@
     <div class="ui top attached segment pushable" id="main_window">
         <div class="ui visible left vertical inverted thin sidebar menu" id="sideMenu">
             <a class="side_menu item" id="mnuAnim">
-                <i class="film icon"></i> Animations
+                <i class="play icon"></i> Animations
             </a>
             <a class="side_menu item" id="mnuQueue">
-                <i class="retweet icon"></i> Queue
+                <i class="film icon"></i> Queue
                 <div class="ui hidden green label" id="queueCount"></div>
+            </a>
+            <a class="side_menu item" id="mnuQS">
+                <i class="lightning icon"></i> Quick Selects
             </a>
             <a class="side_menu item" id="mnuConfig">
                 <i class="configure icon"></i> Output Setup
