--- a/index.html
+++ b/index.html
@@ -20,10 +20,6 @@
     <script src="js/bp.js"></script>
     <script src="js/controls.js"></script>
     <script src="js/main.js"></script>
-    <script>
-        setLogAll();
-        $("#load_modal").modal('show');
-    </script>
 </head>
 
 <body>
@@ -49,7 +45,8 @@
                 <div class="ui hidden green label" id="queueCount"></div>
             </a>
             <a class="side_menu item" id="mnuQS">
-                <i class="lightning icon"></i> Quick Selects
+                <i class="lightning icon"></i> QS
+                <div class="ui hidden green label" id="qsCount"></div>
             </a>
             <a class="side_menu item" id="mnuConfig">
                 <i class="configure icon"></i> Output Setup
@@ -67,10 +64,18 @@
                 <div class="ui large header">Animations</div>
                 <div id="anims"></div>
                 <div class="ui hidden divider short"></div>
+                <div class="ui green button" id="saveQSAnimEdit">Save</div>
                 <div class="ui green button" id="saveQueueEdit">Save</div>
-                <div class="ui disabled button" id="addQueue">Add to Queue</div>
                 <div class="ui disabled button green" id="startAnim">Start</div>
                 <div class="ui button red" id="stopAnim">Stop</div>
+                <button class="ui labeled icon button" id="addQueue">
+                    <i class="film icon"></i>
+                    Add to Queue
+                </button>
+                <button class="ui labeled icon button" id="addQSAnim">
+                    <i class="lightning icon"></i>
+                    Add to QS
+                </button>
             </div>
 
             <div class="ui basic segment ui_pane" id="paneQueue">
@@ -87,11 +92,34 @@
 
                 <div class="ui list" id="queueList">
                 </div>
-                <div class='ui basic segment'>
-                    <!-- <button class='ui icon button' id="saveQ"><i class='save icon'></i></button> -->
-                    <button class='ui green button' id="startQ">Start</button>
-                    <button class='ui red button' id="stopQ">Stop</button>
+
+                <div class="ui green button" id="saveQSQueueEdit">Save</div>
+                <button class='ui green button' id="startQ">Start</button>
+                <button class='ui red button' id="stopQ">Stop</button>
+                <button class="ui labeled icon button" id="addQSQueue">
+                    <i class="lightning icon"></i>
+                    Add to QS
+                </button>
+
+            </div>
+
+            <div class="ui basic segment ui_pane" id="paneQS">
+                <div class="ui grid">
+                    <div class="ui fluid large header five wide column" id="qsHeader">Quick Select</div>
+                    <div class="right aligned eleven wide column">
+                        <div class="paramCombo" id="qsCombo"></div>
+                        <div class="ui icon buttons">
+                            <button class="ui disabled compact icon button" id="qs_save"><i class="save icon"></i></button>
+                            <button class="ui disabled compact icon button" id="qs_delete"><i class="trash icon"></i></button>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="ui list" id="qsList">
+                </div>
+
+                <button class="ui button" id="launchQS">Launch QS Page</button>
+
             </div>
 
             <div class="ui basic segment ui_pane" id="paneConfig">
@@ -215,6 +243,24 @@
         </div>
         <div class="actions">
             <div class="ui approve green button" id="addQueueBtn">Add</div>
+            <div class="ui deny red button">Cancel</div>
+        </div>
+    </div>
+
+    <div class="ui basic small modal" id="addQSModal">
+        <div class="header" id="addQSHeader">Add to Quick Select</div>
+        <div class="ui content">
+            <div class="ui fluid labeled input ui_input">
+                <div class="ui label">Name</div>
+                <input type="text" id="addQSName">
+            </div>
+            <div class="ui fluid labeled input">
+                <div class="ui label">Description</div>
+                <input type="text" id="addQSDesc">
+            </div>
+        </div>
+        <div class="actions">
+            <div class="ui approve green button" id="addQSBtn">Add</div>
             <div class="ui deny red button">Cancel</div>
         </div>
     </div>
