added edit cancel

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <div class="ui hidden divider short"></div>
                 <div class="ui green button" id="saveQSAnimEdit">Save</div>
                 <div class="ui green button" id="saveQueueEdit">Save</div>
+                <div class="ui red button" id="cancelAnimEdit">Cancel</div>
                 <div class="ui disabled button green" id="startAnim">Start</div>
                 <div class="ui button red" id="stopAnim">Stop</div>
                 <button class="ui labeled icon button" id="addQueue">
@@ -94,6 +95,7 @@
                 </div>
 
                 <div class="ui green button" id="saveQSQueueEdit">Save</div>
+                <div class="ui red button" id="cancelQSQueueEdit">Cancel</div>
                 <button class='ui green button' id="startQ">Start</button>
                 <button class='ui red button' id="stopQ">Stop</button>
                 <button class="ui labeled icon button" id="addQSQueue">
