--- a/index.html
+++ b/index.html
@@ -3,23 +3,22 @@
 <head>
     <title>PixelWeb</title>
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" /> -->
-    <link rel="stylesheet" href="semantic/dist/semantic.min.css">
-    <link rel="stylesheet" href="css/spectrum.css">
-    <link rel="stylesheet" href="css/ui.css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/jquery-ui.min.js"></script>
-    <script src="js/jquery.numeric.min.js"></script>
-    <script src="semantic/dist/semantic.min.js"></script>
-    <script src="js/spectrum.js"></script>
-    <script src="js/loglevel.min.js"></script>
-    <script src="js/ui.js"></script>
-    <script src="js/core.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/api.calls.js"></script>
-    <script src="js/bp.js"></script>
-    <script src="js/controls.js"></script>
-    <script src="js/main.js"></script>
+    <link rel="stylesheet" href="/semantic/dist/semantic.min.css">
+    <link rel="stylesheet" href="/css/spectrum.css">
+    <link rel="stylesheet" href="/css/ui.css">
+    <link rel="stylesheet" href="/css/jquery-ui.min.css">
+    <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery-ui.min.js"></script>
+    <script src="/js/jquery.numeric.min.js"></script>
+    <script src="/semantic/dist/semantic.min.js"></script>
+    <script src="/js/spectrum.js"></script>
+    <script src="/js/loglevel.min.js"></script>
+    <script src="/js/core.js"></script>
+    <script src="/js/ui.js"></script>
+    <script src="/js/api.js"></script>
+    <script src="/js/api.calls.js"></script>
+    <script src="/js/controls.js"></script>
+    <script src="/js/main.js"></script>
 </head>
 
 <body>
