fixed timeout ui

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="ui basic modal inverted" id="load_modal">
         <div class="ui center aligned header">Initializing PixelWeb</div>
         <div class="content">
-            <div class="ui inverted active indicating large progress" id="loadProg">
-                <div class="bar" style="transition-duration: 300ms;">
+            <div class="ui inverted indicating large progress" id="loadProg">
+                <div class="bar">
                     <div class="progress"></div>
                 </div>
             </div>
