--- a/index.html
+++ b/index.html
@@ -265,6 +265,17 @@
         </div>
     </div>
 
+    <div class="ui basic small modal" id="needConfigModal">
+        <div class="header">Configuration Required</div>
+        <div class="image content">
+            <img class="image"><i class="huge yellow warning circle icon"></i></img>
+            <p>Please configure and run the output before continuing.</p>
+        </div>
+        <div class="actions">
+            <div class="ui approve green button">OK</div>
+        </div>
+    </div>
+
     <div class="ui basic small modal" id="addQueueModal">
         <div class="header" id="addQueueHeader">Add to Queue</div>
         <div class="ui content">
