error messages in QuickSelect

--- a/ui/qs.html
+++ b/ui/qs.html
@@ -22,6 +22,16 @@
             Stop
         </button>
     </div>
+    <div class="ui basic small modal" id="BPError">
+        <div class="header">QuickSelect Error</div>
+        <div class="image content">
+            <img class="image"><i class="huge red warning sign icon"></i></img>
+            <p class="" id="bpErrorMsg"></p>
+        </div>
+        <div class="actions">
+            <div class="ui approve green button">OK</div>
+        </div>
+    </div>
 </body>
 
 </html>
