--- a/ui/index.html
+++ b/ui/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/ui.css">
     <link rel="stylesheet" href="/css/jquery-ui.min.css">
     <script src="/js/jquery.min.js"></script>
+    <script src="/js/jquery-ui.min.js"></script>
     <script src="/semantic/dist/semantic.min.js"></script>
     <script src="/js/spectrum.js"></script>
     <script src="/js/loglevel.min.js"></script>
