--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,8 @@
 
 <body>
     <div class="ui basic modal inverted" id="load_modal">
-        <div class="ui center aligned header">Initializing PixelWeb</div>
+        <img class="ui image" src="/img/PixelWebLogo_Large.png">
+        <!-- <div class="ui center aligned header">Initializing PixelWeb</div> -->
         <div class="content">
             <div class="ui inverted indicating large progress" id="loadProg">
                 <div class="bar">
@@ -35,6 +36,9 @@
 
     <div class="ui top attached segment pushable" id="main_window">
         <div class="ui visible left vertical inverted thin sidebar menu" id="sideMenu">
+            <a class="side_menu item" id="mnuAbout">
+                <img class="ui small image" src="/img/PixelWebLogo_Small.png">
+            </a>
             <a class="side_menu item" id="mnuAnim">
                 <i class="play icon"></i> Animations
             </a>
@@ -58,6 +62,16 @@
         </div>
 
         <div class="pusher" id="main_content">
+            <div class="ui basic segment ui_pane" id="paneAbout">
+                <img class="ui huge centered image" src="/img/PixelWebLogo_Large.png">
+                <p class="ui basic center aligned segment largeFont"></p>
+                <p class="ui basic center aligned segment largeFont">Thank you for choosing PixelWeb!</p>
+                <p class="ui basic center aligned segment largeFont">PixelWeb is Open Source, under the MIT License and provided free of charge to all. If you paid for this software, please contact Maniacal Labs via <a href="mailto:contact@maniacallabs.com">contact@maniacallabs.com</a> to report the license violation.</p>
+                <p class="ui basic center aligned segment largeFont"></p>
+                <p class="ui basic center aligned segment largeFont">PixelWeb &copy; 2015 - Maniacal Labs / Adam Haile</p>
+
+            </div>
+
             <div class="ui basic segment ui_pane" id="paneAnim">
                 <div class="ui large header">Animations</div>
                 <div id="anims"></div>
